Altered the page to simply say that there is currently no content available.

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
     <head>
         <title>Development Website</title>
-        <link rel="stylesheet" type="text/css" href="styles.css">
+        <!-- <link rel="stylesheet" type="text/css" href="styles.css">
         <script>
             function getHexColor() {
                 let hex = Math.floor(Math.random() * 16777215).toString(16);
@@ -19,11 +19,12 @@
                     card.style = gradStyle;
                 });
             });
-        </script>
+        </script> -->
 
     <body>
         <h1>Development Website</h1>
-
+        <p style="font-size: large;">Nothing here currently, but I'll occasionally make something to host here for short periods.</p>
+<!-- 
         <div class="card">
             <div class="card-content" id="dynamic-card-content">
             <p class="card-title">Introduction
@@ -60,6 +61,6 @@
             <li>Me</li>
             </ul>
         </div>
-        </div>
+        </div> -->
     </body>
 </html>
